--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "hangman",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.19",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/socket.io-client": "^1.4.34",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.0.4",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -34,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.0.1",
+    "@types/react-router-dom": "^5.1.7"
+  },
+  "main": "src/index.tsx",
+  "author": "Jacob Sommer <jacob.sommer@comcast.net>",
+  "license": "MIT"
 }
